--- a/index.html
+++ b/index.html
@@ -430,8 +430,8 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="kpi-sub-card">
-                                <h4 class="kpi-sub-title" id="HLS">Harapan Lama Sekolah</h4>
+                            <div class="kpi-sub-card" id="HLS">
+                                <h4 class="kpi-sub-title">Harapan Lama Sekolah</h4>
                                 <div class="kpi-sub-value"><span id="hls-value"></span> Tahun</div>
                                 <div class="sub-kpi-change increase">
                                     <div class="indicator" id="indikator-hls"></div>
@@ -454,8 +454,8 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="kpi-sub-card">
-                                <h4 class="kpi-sub-title" id="PKP">Pengeluaran per Kapita</h4>
+                            <div class="kpi-sub-card" id="PKP">
+                                <h4 class="kpi-sub-title">Pengeluaran per Kapita</h4>
                                 <div class="kpi-sub-value">Rp <span id="pkp-value"></span> Juta</div>
                                 <div class="sub-kpi-change increase">
                                     <div class="indicator" id="indikator-pkp"></div>
